--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     font-family: 'Open Sans';
     line-height: 1.5;
+    background-color: aliceblue;
 }
 
 img{
@@ -16,3 +17,78 @@ h3,
 p{
     margin: 0;
 }
+
+section {
+    padding: 7em 0;
+  }
+  
+  .container {
+    width: 85%;
+    max-width: 65em;
+    margin: 0 auto;
+  }
+  
+  .divine {
+    display: flex;
+    gap: 1em;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .divine > * {
+    flex-basis: 30%;
+    min-width: 15em;
+  }
+  
+  .spacing > * + * {
+    margin-top: var(--spacer, 2rem);
+  }
+  
+  .h1-main {
+    font-size: 4rem;
+    font-size: clamp(10rem, calc(10vw + 6rem), 15.5rem);
+    line-height: 1;
+    text-transform: uppercase;
+    color: rgb(0, 0, 0);
+  }
+  .section-title {
+    text-align: center;
+    font-size: clamp(2.5rem, calc(5vw + 1rem), 4rem);
+    line-height: 1;
+    color: #17353d;
+    margin-bottom: 5rem;
+  }
+  
+  .header {
+    text-align: center;
+    padding: 15em 0;
+    background-image: url("img/dish_title.jpg");
+  }
+  
+  
+  .options {
+    background: #eee;
+  }
+  
+  .option {
+    display: block;
+    position: relative;
+    text-decoration: none;
+    color: #333;
+    text-align: center;
+    line-height: 1;
+  }
+  
+  
+  .products {
+    padding: 3em;
+    border-radius: 1em;
+    margin-bottom: 5em;
+    text-align: center;
+  }
+  
+  
+  .img-product {
+    margin: -5em 0 0 0;
+  }
+  
