--- a/style.css
+++ b/style.css
@@ -62,11 +62,18 @@ section {
     padding: 15em 0;
     background-image: url("img/dish_title.jpg");
   }
-  
-  .description{
+
+  .name{
     text-align: center;
     font-size: 4rem;
     font-size: clamp(2rem, calc(4vw + 1.5rem), 1.5rem);
+
+  }
+  
+  .description{
+    text-align: center;
+    font-size: 2rem;
+    font-size: clamp(0.5rem, calc(2vw + 0.5rem), 1rem);
   }
 
   .options {
